--- a/index.html
+++ b/index.html
@@ -60,12 +60,38 @@
                         </p>
             </div>
 
+
+        <ul class ="fixed_location">
+            <li>1/2000s</li>
+            <li>f/11</li>
+            <li>100</li>
+            <li>Iceland</li>
+
+        </ul>
         </section>
+
+
+
+        <section class="sunset">
+            <div class="sub_container">
+                <h4>Sunset at Mount Fuji</h4>
+                <p2>Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.</p2>
+            </div>
+
+            <ul class ="fixed_location">
+                <li>1/2000s</li>
+                <li>f/11</li>
+                <li>100</li>
+                <li>Iceland</li>
+
+            </ul>
+
+
+        </section>
+
+
+
     </main>
-
-    <div></div>
-
-
 
 
     </body>
