--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/style.css">
 
+
+
 </head>
     <body>
+
+<!------- HEADER START ----------------------------->
         <header class="for_header">
             <div class="for_header_div">
                 <a href="#">
@@ -40,59 +44,106 @@
 
                             <li class="for_header_li_Contact">
                                 <a href="#" class="for_header_a_Contact"> Contact </a>
-                                                                    </li>
-
-                                        <li class="for_header_li_Template">
-                                            <a href="#" class="for_header_a_Template"> Get template
-                                            </a>
-                                        </li>
+                                                                                                </li>
+                          <li class="for_header_li_Template">
+                                  <a href="#" class="for_header_a_Template"> Get template
+                                   </a>
+                              </li>
                         </ul>
                     </nav>
             </div>
         </header>
 
-    <main>
-        <section class="for_main_section">
-            <div class="for_section_div">
-                <h2 class="for_h2"> Photograher & Filmmaker </h2>
-                    <h1 class="for_h1"> Aperture Studios </h1>
-                        <p class="for_Paragraph"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut deserunt ducimus exercitationem pariatur quaerat quidem reiciendis? Corporis earum eum expedita magni non officiis reiciendis soluta temporibus velit, voluptates? Unde.
-                        </p>
-            </div>
 
+<!-------------------------HEADER END -------------->
 
-        <ul class ="fixed_location">
+<main>
+    <section class="for_main_section">
+        <div>
+            <h2>Photographer & Filmmaker</h2>
+            <h1>Aperture Studios</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam autem esse quisquam, quos reiciendis repellat veritatis voluptas. Cum deleniti doloribus, ducimus fugit labore nobis quasi quidem ratione repellendus saepe.
+            </p>
+        </div>
+        <ul class="fixed_location">
             <li>1/2000s</li>
             <li>f/11</li>
             <li>100</li>
-            <li>Iceland</li>
-
+            <li>IceLand</li>
         </ul>
-        </section>
+    </section>
+
+    <section class="sunset">
+        <div class="sub_container">
+            <h4>Sunset at Mount Fuji</h4>
+            <p>Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.</p>
+        </div>
+        <ul class="fixed_location">
+            <li>1/2000s</li>
+            <li>f/11</li>
+            <li>100</li>
+            <li>IceLand</li>
+        </ul>
+    </section>
 
 
-
-        <section class="sunset">
-            <div class="sub_container">
-                <h4>Sunset at Mount Fuji</h4>
-                <p2>Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.</p2>
-            </div>
-
-            <ul class ="fixed_location">
-                <li>1/2000s</li>
-                <li>f/11</li>
-                <li>100</li>
-                <li>Iceland</li>
-
-            </ul>
+    <section class="leafs">
+        <div class="sub_container">
+            <h4>Monstera Leafs</h4>
+            <p>Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+        </div>
+        <ul class="fixed_location">
+            <li>1/400s</li>
+            <li>f/3,5</li>
+            <li>100</li>
+            <li>Costa Rica</li>
+        </ul>
+    </section>
 
 
-        </section>
+    <section class="past_clients">
+        <div class="container">
+            <h2>Past clients</h2>
+            <p>Trusted by your favourite companies</p>
+        </div>
+        <div class="d_flex">
+            <a href="#">
+                <img src="images/Hill_.svg" alt="img1"></a>
+            <a href="#">
+                <img src="images/RIKS_.svg" alt="img2"></a>
+            <a href="#">
+                <img src="images/STUDIO_.svg" alt="img3"></a>
+            <a href="#">
+                <img src="images/CHILL_.svg" alt="img4"></a>
+            <a href="#">
+                <img src="images/STOCK_.svg" alt="img5"></a>
+        </div>
+    </section>
 
+
+    <section class="star_fall">
+        <div class="sub_container">
+            <h4>Star fall in the Himalayas</h4>
+            <p>Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.</p>
+        </div>
+        <ul class="fixed_location">
+            <li>6"</li>
+            <li>f/11</li>
+            <li>800</li>
+            <li>Nepal</li>
+        </ul>
+    </section>
+
+
+    <section class="help">
+        <div>
+            <h2>Need help with photography <br> or videography?</h2>
+            <p>We're here for you!</p>
+            <a href="#">Get in touch</a>
+        </div>
+    </section>
 
 
     </main>
-
-
-    </body>
+</body>
 </html>
