--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
         </div>
         <div class="d_flex">
             <a href="#">
-                <img src="images/Hill_.svg" alt="img1"></a>
+                <img src="../images/Hill_.svg" alt="Hill"></a>
             <a href="#">
-                <img src="images/RIKS_.svg" alt="img2"></a>
+                <img src="../images/RIKS_.svg" alt="RIKS"></a>
             <a href="#">
-                <img src="images/STUDIO_.svg" alt="img3"></a>
+                <img src="../images/STUDIO_.svg" alt="STUDIO"></a>
             <a href="#">
-                <img src="images/CHILL_.svg" alt="img4"></a>
+                <img src="../images/CHILL_.svg" alt="CHILL"></a>
             <a href="#">
-                <img src="images/STOCK_.svg" alt="img5"></a>
+                <img src="../images/STOCK_.svg" alt="STOCK"></a>
         </div>
     </section>
 
