--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
         </div>
         <div class="d_flex">
             <a href="#">
-                <img src="../images/Hill_.svg" alt="Hill"></a>
+                <img src="images/hill.svg" alt="Hill"></a>
             <a href="#">
-                <img src="../images/RIKS_.svg" alt="RIKS"></a>
+                <img src="images/riks.svg" alt="RIKS"></a>
             <a href="#">
-                <img src="../images/STUDIO_.svg" alt="STUDIO"></a>
+                <img src="images/studio.svg" alt="STUDIO"></a>
             <a href="#">
-                <img src="../images/CHILL_.svg" alt="CHILL"></a>
+                <img src="images/chill.svg" alt="CHILL"></a>
             <a href="#">
-                <img src="../images/STOCK_.svg" alt="STOCK"></a>
+                <img src="images/stock.svg" alt="STOCK"></a>
         </div>
     </section>
 
